--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>李棠寅的前端工作</title>
   </head>
   <body style="height: 100%">
-    <div id="app"></div>
+    <div id="app">我叫杨喜成最喜欢吃鸡</div>
     <!-- built files will be auto injected -->
   </body>
 </html>
