--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">  
     <title>李棠寅的前端工作</title>
   </head>
-  <body style="height: 100%">
-    <div id="app">我叫杨喜成最喜欢吃鸡</div>
+  <body style="height: 100%;">
+    <div style="padding-top:60px>
+      <p style="text-algin:center">我叫杨喜成</p>
+      <p style="text-algin:center">QQ：3306471314</p>
+      <p style="text-algin:center">电话：18509378428</p>
+      <p style="text-algin:center">邮箱：3306471314@qq.com</p>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
