--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <p style="text-algin:center">QQ：3306471314</p>
       <p style="text-algin:center">电话：18509378428</p>
       <p style="text-algin:center">邮箱：3306471314@qq.com</p>
+      <input style="width:200px" type="text" placeholder="请输入您的银行账户，我是不会知道的" /> 
+      <input style="width:200px" type="text" placeholder="请输入您的银行账户密码，我还是不会知道的" /> 
     </div>
     <!-- built files will be auto injected -->
   </body>
