--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">  
-    <title>李棠寅的前端工作</title>
-  </head>
-  <body style="height: 100%;">
-    <div style="padding-top:60px>
-       <img src="my.jpg">
-      <p style="text-algin:center">我叫杨喜成</p>
-      <p style="text-algin:center">QQ：3306471314</p>
-      <p style="text-algin:center">电话：18509378428</p>
-      <p style="text-algin:center">邮箱：3306471314@qq.com</p>
-      <input style="width:200px" type="text" placeholder="请输入您的银行账户，我是不会知道的" /> 
-      <input style="width:200px" type="text" placeholder="请输入您的银行账户密码，我还是不会知道的" /> 
-    </div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>杨喜成个人主页</title><link href=./static/css/app.856d22f54277efffabd96378a18c7d59.css rel=stylesheet></head><body style="height: 100%"><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.1748317793fd05195ff8.js></script><script type=text/javascript src=./static/js/app.9dfb17d1319fcf6e05e6.js></script></body></html>
